--- a/style.css
+++ b/style.css
@@ -1,7 +1,20 @@
+* {
+  box-sizing: content-box;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: rgb(25, 25, 25);
   color: white;
   font-family: 'Roboto', sans-serif;
+  margin: 0;
+}
+
+main {
+  padding: 1rem;
 }
 
 .text-center {
@@ -15,4 +28,18 @@ body {
 
 img {
   max-width: 100%;
+}
+
+.summary {
+  color: white;
+  text-decoration: none !important;
+}
+
+.text-underline {
+  text-decoration: underline;
+}
+
+footer {
+  background-color: rgb(50, 50, 50);
+  padding: 1rem;
 }
